# relate-backend-redis-lambda

./: .gitignore  Cargo.toml  deploy.sh  docker-compose.yml  packaged.yaml  template.yaml
.lambda-rust/: install  package
relate-user-search-lambda/: Cargo.toml
src/: database.rs  main.rs  server.rs
src/api/users/: crud.rs  mod.rs
src/certs/: ca.crt  combined.pem  redis-client.crt  redis-client.key  redis-client.p12
